# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "danatools"
version = "0.1.1"
description = "A bunch of convenient tools to analyze data"
readme = "README.md"
authors = [{ name = "Diego Ravignani", email = "diego.ravignani@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["statistics", "data", "analysis"]
dependencies = [
    "scipy >= 1.9.3",
    "matplotlib >= 3.7.4"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ravignad/danatools"
