# pyproject.toml

[tool.poetry]
name = "danatools"
version = "0.2.0"
description = ""
authors = ["Diego Ravignani <diego.ravignani@gmail.com>"]
readme = "README.md"
license = "LICENSE"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["statistics", "data", "analysis"]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.13.0"
matplotlib = "^3.8.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/ravignad/danatools"
